Fixed cut off fields

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/vtmirage2/styles/classic_mirage_color_scheme/_general.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/vtmirage2/styles/classic_mirage_color_scheme/_general.scss
@@ -122,14 +122,30 @@ dl {
     font-weight: bold;
 }
 
+
 .ds-table-responsive {
+    
     @media (max-width: $screen-xs-max) {
         overflow-x: auto;
         .word-break {
             min-width: 300px;
         }
     }
+    table {
+        width: 100%;
+        table-layout: fixed;
+        tr {
+            td {
+            
+                overflow:hidden;
+                word-wrap:break-word;
+                white-space:pre-wrap
+            }
+        }
+    }
+     
 }
+
 
 .table legend {
     display: none;
